# luma

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install.sh
.github/workflows/: ci.yml
crates/luma-core/: Cargo.toml
crates/luma-core/src/: core.rs  lib.rs
crates/luma-editors/: Cargo.toml
crates/luma-editors/src/: lib.rs  nvim-luma.lua  nvim.rs
crates/luma-harnesses/: Cargo.toml
crates/luma-harnesses/src/: lib.rs  pi.rs
crates/luma-os-macos/: Cargo.toml
crates/luma-os-macos/src/: lib.rs  macos.rs
crates/luma-terminals/: Cargo.toml
crates/luma-terminals/src/: ghostty.rs  lib.rs  tmux.rs
crates/luma-tui/: Cargo.toml
crates/luma-tui/src/: k9s.rs  lib.rs
crates/lumactl/: Cargo.toml
crates/lumactl/src/: main.rs
examples/themes/: README.md  example-dark.json
schemas/: palette.schema.json
