[package]
name = "lumactl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumactl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
luma-core.workspace = true
luma-editors.workspace = true
luma-harnesses.workspace = true
luma-os-macos.workspace = true
luma-terminals.workspace = true
luma-tui.workspace = true
serde_json.workspace = true
